--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,24 @@
 {
+  "parser": "babel-eslint",
   "extends": [
-    "plugin:import",
+    "eslint:recommended",
+    "plugin:react/recommended",
     "prettier",
     "prettier/react"
-  ]
+  ],
+  "env": {
+    "browser": true,
+    "node": true
+  },
+  "parserOptions": {
+    "ecmaFeatures": {
+      "modules": true,
+      "jsx": true
+    }
+  },
+  "settings": {
+    "react": {
+      "pragma": "h"
+    }
+  }
 }
