--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
-  "presets": ["env"],
-  "plugins": [["transform-react-jsx", { "pragma": "h" }]]
+  "presets": ["@babel/preset-env"],
+  "plugins": [["@babel/plugin-transform-react-jsx", { "pragma": "h" }]]
 }
