--- a/package.json
+++ b/package.json
@@ -8,22 +8,22 @@
     "build": "webpack --mode production"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.2",
-    "babel-loader": "^7.1.4",
-    "babel-plugin-transform-react-jsx": "^6.24.1",
-    "babel-preset-env": "^1.6.1",
-    "del-cli": "^2.0.0",
+    "@babel/core": "^7.9.0",
+    "@babel/plugin-transform-react-jsx": "^7.9.4",
+    "@babel/preset-env": "^7.9.0",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.1.0",
+    "del-cli": "^3.0.0",
     "eslint": "^6.0.1",
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-react": "^7.7.0",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.0.7",
+    "html-loader": "^1.1.0",
+    "html-webpack-plugin": "^4.0.4",
     "webpack": "^4.1.1",
     "webpack-cli": "^3.3.6",
     "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
-    "preact": "^8.2.7"
+    "preact": "^10.3.4"
   }
 }
